--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
     # Build the Docker Image
     - name: Build Docker Image
       run: |
-        docker build -t SilpashreeSahoo/devops-demo:${{ env.VERSION }} .
+        docker build -t silpa13/devops-demo:${{ env.VERSION }} .
 
     # Push the Docker Image
     - name: Push Docker Image
       run: |
-        docker push SilpashreeSahoo/devops-demo:${{ env.VERSION }}
+        docker push silpa13/devops-demo:${{ env.VERSION }}
 
     # UPdate the K8s Manifest Files
     - name: Update K8s Manifests
