--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,17 @@ jobs:
     # Update Github
     - name: Commit the changes
       run: |
-        git config --global user.email "<>"
-        git config --global user.name "GitHub Actions Bot"
-        git checkout main
-        git add deploy/deployment.yaml
-        git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
-        git push origin main
+        # Set Git user configuration for the commit
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
 
+        # Check if there are any changes to commit (specifically the deployment.yaml)
+        # using git diff --exit-code --quiet deploy/deployment.yaml
+        if ! git diff --exit-code --quiet deploy/deployment.yaml; then
+          echo "Changes detected in deploy/deployment.yaml, proceeding with commit."
+          git add deploy/deployment.yaml
+          git commit -m "Automated: K8s deployment image update - ${{ env.VERSION }} [skip ci]"
+          git push
+        else
+          echo "No changes to commit in deploy/deployment.yaml. Working tree is clean."
+        
