--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -16,7 +16,8 @@ spec:
         app: devops
     spec:
       containers:
-      - name: devops_demo
-        image: SilpashreeSahoo/devops-demo:v1
+      - name: devops-demo # Or whatever your container name is
+        image: silpa13/devops_demo:v20250718074307 # <--- THIS MUST BE PERFECTLY CORRECT
         ports:
         - containerPort: 80
+
