--- a/deploy/svc.yaml
+++ b/deploy/svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: devops_demo-service
+  name: devops-demo-service
   namespace: default
 spec:
   selector:
